<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="32sp"
            android:layout_marginTop="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/global_statistics"
            android:textSize="32sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.github.mikephil.charting.charts.PieChart
            android:layout_gravity="center_horizontal"
            android:id="@+id/global_pie_chart"
            android:layout_width="300dp"
            android:layout_height="400dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_breakdown"
            android:textSize="32sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_vertical">
            <SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="5"
                android:iconifiedByDefault="false"
                android:background="@drawable/search_border"/>
            <ImageView
                android:id="@+id/rank_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/icon"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_tune_24"
                android:rotation="90"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:text="@string/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="2"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"/>

            <TextView
                android:text="@string/recorded_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/recoveries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/deaths"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginBottom="32dp"
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:listitem="@layout/country_item"/>

    </LinearLayout>
</ScrollView>